# scene-selector

./: .eslintrc.json  .flake8  .gitignore  .npmrc  .prettierrc  Makefile  README.md  eslint.config.mjs  forge.config.ts  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.json  update-calvar.bash
.github/: dependabot.yml
.github/workflows/: bump-version.yml  check.yml  lint.yml  publish.yml  test.yml  workflow.yml
e2e/: app.pw.spec.ts  app.spec.ts  binary-search.pw.spec.ts  error-handling.pw.spec.ts  fixtures.ts  happy-path.pw.spec.ts  range-narrowing.pw.spec.ts  slider-limits.pw.spec.ts
explore_frames/: __main__.py  ui.py
scene_selector/: __main__.py  ui.py  video.py
scripts/: generateAvsynctest.ts
src/: api.ts  app.tsx  index.css  main.ts  preload.ts  renderer.ts  rpcSchema.ts  trpc.ts
src/@types/: window.d.ts
src/components/: BinarySearchModal.tsx  CommandExample.tsx  CommandPreview.tsx  FileInput.tsx  FrameImage.tsx  FrameNumberControl.tsx  FrameView.tsx  StartEndSelector.tsx  TrpcContextsProvider.tsx  VideoInfoContextsProvider.tsx
src/contexts/: VideoContext.tsx
src/reducers/: frameNumbersReducer.ts
src/renderer/: app.tsx  index.css  trpc.ts
src/rpcServer/: getFrameImageBase64.ts  getVideoInfo.test.ts  getVideoInfo.ts  router.ts
src/states/: binarySearchState.ts  frameNumbers.ts  videoInfo.ts
src/utils/: convertWinPathToWSL.ts  execFFmpeg.test.ts  execFFmpeg.ts  ffmpeg.ts  frameNumberToTimecode.test.ts  frameNumberToTimecode.ts  getOutPath.test.ts  getOutPath.ts
(+19 files in other folders)
