[tool.isort]
profile = "black"

[tool.poetry]
name = "explore-frames"
version = "0.1.0"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "explore_frames"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = {extras = ["pyproject"], version = "^5.12.0"}
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
