[tool.isort]
profile = "black"

[tool.poetry]
name = "scene-selector"
version = "2023.7.4.1"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "scene_selector"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
flet = "^0.7.4"
opencv-python-headless = "^4.8.0.74"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = {extras = ["pyproject"], version = "^5.12.0"}
mypy = "^1.4.1"

[tool.poetry.scripts]
scene-selector = "scene_selector.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
